# golv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: cmake.yml
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  skat_solver.cpp
examples/skat/: skat_push_optimizer.cpp  skat_pusher.cpp  skat_solver.cpp
games/: bridge.cpp  bridge.hpp  cards.cpp  skat.hpp  tictactoe.hpp
golv/: CMakeLists.txt
golv/algorithm/: alphabeta.hpp  cfr.hpp  mtd_f.hpp  mws.hpp  mws_unordered_table.hpp  negamax.hpp  transposition_table.hpp
golv/algorithms/: alphabeta.hpp  move_ordering.hpp  mtd_f.hpp  mws.hpp  mws_unordered_table.hpp  negamax.hpp  unordered_table.hpp  utility.hpp
golv/games/: bridge.cpp  bridge.hpp  cards.cpp  cards.hpp  connectfour.cpp  connectfour.hpp  exception.hpp  kuhn.hpp  rps.hpp  skat.cpp  skat.hpp  tictactoe.cpp  tictactoe.hpp
golv/traits/: game.hpp  transposition_table.hpp
golv/util/: cyclic_number.hpp  logging.cpp  logging.hpp  test_utils.cpp  test_utils.hpp
python/: CMakeLists.txt  golv_skat.cpp
skatomat2/: CMakeLists.txt  game.cpp  game.h  player.cpp  player.h  rules.cpp  rules.h  simulator.h  singleton.h  skatexception.cpp  skatexception.h  state.cpp  state.h  trick.cpp  trick.h  types.cpp  types.h  util.cpp  util.h
state/: game.hpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  bm_bridge.cpp  bm_skat.cpp  result_bm_string_3.txt  timer.hpp
tests/unit/: CMakeLists.txt
tests/unit/algorithm/: _alphabeta.cpp  _cfr.cpp  _mtd_f.cpp  _mws.cpp  _mws_bridge.cpp  _negamax.cpp
tests/unit/games/: _bridge.cpp  _connectfour.cpp  _kuhn.cpp  _rps.cpp  _skat.cpp  _tictactoe.cpp
tests/unit/util/: _cyclic_number.cpp  test_games.cpp  test_games.hpp
util/: logging .cpp
